# MandiPulse

./: .env.example  .gitignore  CLAUDE.md  MandiPulse_India_Final_Project_Blueprint.md  README.md  RELEASE.md  TODO.md  pyproject.toml  requirements-api.txt  requirements.txt
.streamlit/: config.toml
api/: config.py  errors.py  main.py  routes.py  schemas.py  service.py
app/: streamlit_app.py
configs/: app.yaml  data.yaml  model.yaml  recommendation.yaml
docs/: API_SPEC.md  APP_FLOW.md  ARCHITECTURE.md  COMPLETION_ROADMAP.md  DATA_SCHEMA.md  DATA_SOURCES.md  DEPLOY_API.md  DEPLOY_FRONTEND.md  DESIGN.md  IMPLEMENTATION_PLAN.md  MILESTONE_F_PLAN.md  MILESTONE_G_PLAN.md  MILESTONE_H_PLAN.md  MILESTONE_I_PLAN.md  MILESTONE_J_PLAN.md  MILESTONE_K_PLAN.md  MILESTONE_L_PLAN.md  MILESTONE_M_PLAN.md  MILESTONE_N_PLAN.md  MILESTONE_O_P_PLAN.md  PRD.md  RULES.md  SONNET_HANDOFF.md  TECH_STACK.md  TRACKER.md
scripts/: build_clean_onion_panel.py  build_demo_sample.py  build_feature_table.py  build_forecast_intervals_7d.py  build_recommendations_7d.py  build_web_export.py  day0_validate_ceda.py  fetch_ceda_onion_maharashtra.py  profile_onion_maharashtra.py  run_baseline_sensitivity_7d.py  run_recommendation_backtest_7d.py  train_baselines_7d.py  train_lightgbm_7d.py
tests/: conftest.py  test_api.py  test_app_data_access.py  test_data_store.py  test_demo_fallback.py  test_intervals.py  test_lightgbm_model.py  test_metrics.py  test_pipeline_smoke.py  test_recommend_engine.py  test_recommend_evaluation.py  test_splits.py  test_staleness.py  test_tracking.py  test_utils.py
(+72 files in other folders)
