[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mandipulse"
version = "0.1.0"
description = "Transport-cost-aware mandi decision intelligence for Indian agricultural markets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0",
  "joblib>=1.4",
  "lightgbm>=4.5",
  "mlflow>=2.16",
  "numpy>=1.26",
  "pandas>=2.2",
  "plotly>=5.24",
  "pyarrow>=17.0",
  "pydantic>=2.8",
  "python-dateutil>=2.9",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "requests>=2.32",
  "scikit-learn>=1.5",
  "shap>=0.46",
  "streamlit>=1.38",
]

[project.optional-dependencies]
dev = [
  "black>=24.8",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]
post-mvp = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "uvicorn[standard]>=0.30",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=mandipulse --cov-report=term-missing --cov-fail-under=69"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
